{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 26,
  "lineage": "b5b7d773-21fc-c77b-3023-38881374982f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a252eeae43f661e9",
            "arn": "arn:aws:ec2:eu-central-1:337909760920:elastic-ip/eipalloc-0a252eeae43f661e9",
            "domain": "vpc",
            "id": "eipalloc-0a252eeae43f661e9",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-192-158-162.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.158.162",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-nat-eip",
              "Project": "skywatch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-nat-eip",
              "Project": "skywatch"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "eipalloc-0a252eeae43f661e9",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:internet-gateway/igw-036f084885c0b89ac",
            "id": "igw-036f084885c0b89ac",
            "owner_id": "337909760920",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-igw",
              "Project": "skywatch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-igw",
              "Project": "skywatch"
            },
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "igw-036f084885c0b89ac",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a252eeae43f661e9",
            "association_id": "eipassoc-09319ac2fcdeeae20",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04b4650b1d048a55f",
            "network_interface_id": "eni-040b32a03c0d60c54",
            "private_ip": "10.0.1.34",
            "public_ip": "18.192.158.162",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-075d34265c7fccfad",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-nat",
              "Project": "skywatch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-nat",
              "Project": "skywatch"
            },
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "nat-04b4650b1d048a55f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9f4736f6fd1162e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04b4650b1d048a55f",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0c9f4736f6fd1162e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0c9f4736f6fd1162e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:route-table/rtb-0c9f4736f6fd1162e",
            "id": "rtb-0c9f4736f6fd1162e",
            "owner_id": "337909760920",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-private-rt",
              "Project": "skywatch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-private-rt",
              "Project": "skywatch"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "rtb-0c9f4736f6fd1162e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:route-table/rtb-04d8d6ea9109b771d",
            "id": "rtb-04d8d6ea9109b771d",
            "owner_id": "337909760920",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036f084885c0b89ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-public-rt",
              "Project": "skywatch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-public-rt",
              "Project": "skywatch"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "rtb-04d8d6ea9109b771d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ce20cc700a641f0",
            "region": "eu-central-1",
            "route_table_id": "rtb-0c9f4736f6fd1162e",
            "subnet_id": "subnet-0e2edc953c2b38332"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "rtbassoc-09ce20cc700a641f0",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0968dae45f5918bdf",
            "region": "eu-central-1",
            "route_table_id": "rtb-0c9f4736f6fd1162e",
            "subnet_id": "subnet-05cf682214a5e1a17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "rtbassoc-0968dae45f5918bdf",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06de2efcbd6a1d3f1",
            "region": "eu-central-1",
            "route_table_id": "rtb-04d8d6ea9109b771d",
            "subnet_id": "subnet-075d34265c7fccfad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "rtbassoc-06de2efcbd6a1d3f1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d75e8abe397cdeea",
            "region": "eu-central-1",
            "route_table_id": "rtb-04d8d6ea9109b771d",
            "subnet_id": "subnet-06c536a6136c85140"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "rtbassoc-0d75e8abe397cdeea",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:security-group/sg-04a1b155a28df3899",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a1b155a28df3899",
            "ingress": [],
            "name": "skywatch-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "337909760920",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-eks-cluster-sg",
              "Project": "skywatch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-eks-cluster-sg",
              "Project": "skywatch"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "sg-04a1b155a28df3899",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:security-group/sg-08b9576100273ece9",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b9576100273ece9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04a1b155a28df3899"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "skywatch-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "337909760920",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-eks-nodes-sg",
              "Project": "skywatch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-eks-nodes-sg",
              "Project": "skywatch"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "sg-08b9576100273ece9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:subnet/subnet-0e2edc953c2b38332",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2edc953c2b38332",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909760920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-private-1",
              "Project": "skywatch",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-private-1",
              "Project": "skywatch",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "subnet-0e2edc953c2b38332",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:subnet/subnet-05cf682214a5e1a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cf682214a5e1a17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909760920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-private-2",
              "Project": "skywatch",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-private-2",
              "Project": "skywatch",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "subnet-05cf682214a5e1a17",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:subnet/subnet-075d34265c7fccfad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075d34265c7fccfad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909760920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-public-1",
              "Project": "skywatch",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-public-1",
              "Project": "skywatch",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "subnet-075d34265c7fccfad",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:subnet/subnet-06c536a6136c85140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c536a6136c85140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909760920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-public-2",
              "Project": "skywatch",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-public-2",
              "Project": "skywatch",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02d46e93092e86d55"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "subnet-06c536a6136c85140",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:337909760920:vpc/vpc-02d46e93092e86d55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08bb15348b35e6a57",
            "default_route_table_id": "rtb-0b16162d509da167a",
            "default_security_group_id": "sg-0cbe3ba6accbaa9de",
            "dhcp_options_id": "dopt-059339360a3a91c11",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d46e93092e86d55",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b16162d509da167a",
            "owner_id": "337909760920",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-vpc",
              "Project": "skywatch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "skywatch-vpc",
              "Project": "skywatch"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337909760920",
            "id": "vpc-02d46e93092e86d55",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}